<?xml version="1.0"?>
<package>
  <name>battery_monitor_rmp</name>
  <version>0.0.1</version>
  <description>Monitor for the Segway Batteries</description>

  <author email="cmdunkers@wpi.edu">Chris Dunkers</author>
  <maintainer email="rctoris@wpi.edu">Russell Toris</maintainer>

  <license>BSD</license>

  <url type="website">http://ros.org/wiki/battery_monitor_rmp</url>
  <url type="bugtracker">https://github.com/WPI-RAIL/battery_monitor_rmp/issues</url>
  <url type="repository">https://github.com/WPI-RAIL/battery_monitor_rmp</url>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>message_generation</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>

  <run_depend>message_runtime</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>espeak</run_depend>
</package>
